# asphalt-feedreader

./: .gitignore  .travis.yml  Dockerfile  README.rst  docker-compose.yml  setup.cfg  setup.py  tox.ini
asphalt/feedreader/: __init__.py  api.py  component.py  events.py  metadata.py
asphalt/feedreader/readers/: atom.py  base.py  rss.py
asphalt/feedreader/stores/: mongodb.py  redis.py  sqlalchemy.py
docs/: conf.py  configuration.rst  customfeeds.rst  index.rst  usage.rst
docs/modules/: api.rst  component.rst  events.rst  metadata.rst
docs/modules/readers/: atom.rst  base.rst  rss.rst
docs/modules/stores/: mongodb.rst  redis.rst  sqlalchemy.rst
examples/: basic.py  custom_html.py  persistent.py
tests/: test_component.py  test_stores.py
tests/readers/: test_atom.py  test_base.py  test_rss.py
tests/stores/: test_sqlalchemy.py
