[metadata]
name = asphalt-feedreader
description = Syndication feed reader for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-feedreader
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages =
    asphalt.feedreader
    asphalt.feedreader.readers

install_requires =
    aiohttp ~= 2.0
    asphalt ~= 4.0
    asphalt-scheduler ~= 1.0
    defusedxml ~= 0.5
    python-dateutil ~= 2.6
    typeguard ~= 2.0

[options.extras_require]
test =
    pytest
    pytest-asyncio >= 0.7.0
    pytest-catchlog
    pytest-cov
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    feedreader = asphalt.feedreader.component:FeedReaderComponent
asphalt.feedreader.readers =
    atom = asphalt.feedreader.readers.atom:AtomFeedReader
    rss = asphalt.feedreader.readers.rss:RSSFeedReader

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.feedreader
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,docs
